# process-image

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  cabal.project  cabal.project.freeze  config.sample.yml  config.yml  default.nix  process-image.cabal  shell.nix  stack.yaml
app/: process-image.hs  submit-image.hs  upload-file.go
cxx-src/: guetzli.cc  guetzli.h
go-src/: Makefile  go.mod  go.sum  libbucket.go
nix/: sha256map.nix  sources.json
nix/materialized/: default.nix
nix/materialized/.plan.nix/: map-io.nix  metro-socket.nix  metro.nix  periodic-client.nix  periodic-common.nix  process-image.nix
src/: PI.hs
src/PI/: Config.hs  GuetzliImage.hs  GuetzliImage.hsc  RemoveFile.hs  ResizeImage.hs  SaveFile.hs  UploadFile.hs  UploadFile.hsc  Utils.hs
