cabal-version:       2.2
name:                process-image
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Lupino/process-image#readme
license:             MIT
license-file:        LICENSE
author:              Li Meng Jun
maintainer:          lmjubuntu@gmail.com
copyright:           MIT
category:            value
build-type:          Simple
extra-source-files:  README.md

library
  pkgconfig-depends:   libpng
  include-dirs:        guetzli
                       guetzli/third_party/butteraugli
                       cxx-src
  cxx-sources:         guetzli/guetzli/butteraugli_comparator.cc
                       guetzli/guetzli/dct_double.cc
                       guetzli/guetzli/debug_print.cc
                       guetzli/guetzli/entropy_encode.cc
                       guetzli/guetzli/fdct.cc
                       guetzli/guetzli/gamma_correct.cc
                       -- guetzli/guetzli/guetzli.cc
                       guetzli/guetzli/idct.cc
                       guetzli/guetzli/jpeg_data.cc
                       guetzli/guetzli/jpeg_data_decoder.cc
                       guetzli/guetzli/jpeg_data_encoder.cc
                       guetzli/guetzli/jpeg_data_reader.cc
                       guetzli/guetzli/jpeg_data_writer.cc
                       guetzli/guetzli/jpeg_huffman_decode.cc
                       guetzli/guetzli/output_image.cc
                       guetzli/guetzli/preprocess_downsample.cc
                       guetzli/guetzli/processor.cc
                       guetzli/guetzli/quality.cc
                       guetzli/guetzli/quantize.cc
                       guetzli/guetzli/score.cc
                       guetzli/third_party/butteraugli/butteraugli/butteraugli.cc
                       cxx-src/guetzli.cc
  hs-source-dirs:      src
  exposed-modules:     PI
                     , PI.GuetzliImage
                     , PI.ResizeImage
                     , PI.RemoveFile
                     , PI.SaveFile
                     , PI.Config
  build-depends:       base >= 4.7 && < 5
                     , periodic-client
                     , periodic-common
                     , bytestring
                     , hslogger

                     , filepath
                     , aeson

                     , JuicyPixels
                     , JuicyPixels-extra
                     , text
                     , directory
                     , inline-c-cpp
  default-language:    Haskell2010

executable process-image
  hs-source-dirs:      app
  main-is:             process-image.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , process-image
                     , periodic-client
                     , periodic-common
                     , yaml
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lupino/process-image
